--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,17 @@
 
 	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 	<dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>servlet-api</artifactId>
-    	<version>2.5</version>
-    	<scope>provided</scope>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>servlet-api</artifactId>
+    		<version>2.5</version>
+    		<scope>provided</scope>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
 	<dependency>
-    	<groupId>org.apache.commons</groupId>
-    	<artifactId>commons-dbcp2</artifactId>
-    	<version>2.1.1</version>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-dbcp2</artifactId>
+    		<version>2.1.1</version>
 	</dependency>
 	
 	
@@ -27,9 +27,9 @@
 
 	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
-    	<groupId>org.hibernate</groupId>
-    	<artifactId>hibernate-core</artifactId>
-    	<version>5.2.2.Final</version>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-core</artifactId>
+    		<version>5.2.2.Final</version>
 	</dependency>
 
 
@@ -40,84 +40,83 @@
 	    <version>1.0.2</version>
 	</dependency>
 
-
+	<!-- JSP JSTL-->
 	<dependency>
    		<groupId>jstl</groupId>
-    	<artifactId>jstl</artifactId>
-    	<version>1.2</version>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-expression -->
 	<dependency>
-import org.apache.http.HttpRequest;
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-expression</artifactId>
-    	<version>4.3.3.RELEASE</version>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-expression</artifactId>
+    		<version>4.3.3.RELEASE</version>
 	</dependency>
 
 
 	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
 	<dependency>
-    	<groupId>org.springframework.security</groupId>
-    	<artifactId>spring-security-core</artifactId>
-    	<version>4.1.3.RELEASE</version>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-core</artifactId>
+    		<version>4.1.3.RELEASE</version>
 	</dependency>
 	
 	
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
 	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-web</artifactId>
-    	<version>4.3.3.RELEASE</version>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-web</artifactId>
+    		<version>4.3.3.RELEASE</version>
 	</dependency>
 	
 
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-webmvc</artifactId>
-    	<version>4.3.3.RELEASE</version>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-webmvc</artifactId>
+    		<version>4.3.3.RELEASE</version>
 	</dependency>
 
 
   	<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
 	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-test</artifactId>
-    	<version>4.3.3.RELEASE</version>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-test</artifactId>
+    		<version>4.3.3.RELEASE</version>
 	</dependency>
   	
   	
   	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-core</artifactId>
-    	<version>4.3.3.RELEASE</version>
+   		<groupId>org.springframework</groupId>
+    		<artifactId>spring-core</artifactId>
+    		<version>4.3.3.RELEASE</version>
 	</dependency>
   	
   	
-  	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+  	<!-- https://<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->mvnrepository.com/artifact/org.springframework/spring-context -->
 	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-context</artifactId>
-    	<version>4.3.3.RELEASE</version>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-context</artifactId>
+    		<version>4.3.3.RELEASE</version>
 	</dependency>
   		
-	<dependency>	
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
-    	<groupId>org.springframework</groupId>
-   		<artifactId>spring-tx</artifactId>
-    	<version>4.3.3.RELEASE</version>
-		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
 	<dependency>
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-    	<groupId>mysql</groupId>
-    	<artifactId>mysql-connector-java</artifactId>
-    	<version>5.1.35</version>
+    		<groupId>org.springframework</groupId>
+   		<artifactId>spring-tx</artifactId>
+    		<version>4.3.3.RELEASE</version>
+	</dependency>
+	  
+	 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>5.1.35</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
@@ -128,9 +127,9 @@ import org.apache.http.HttpRequest;
 	
   	<!-- https://mvnrepository.com/artifact/org.projectlombok/maven-lombok-plugin -->
 	<dependency>
-    	<groupId>org.projectlombok</groupId>
-    	<artifactId>maven-lombok-plugin</artifactId>
-    	<version>0.9.3.1</version>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>maven-lombok-plugin</artifactId>
+    		<version>0.9.3.1</version>
 	</dependency>
   	
   </dependencies>
