--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
+  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.0</version>
+        <configuration>
+             <source>1.8</source>
+             <target>1.8</target>
+        </configuration>
+   </plugin>	
+	
+	
   <dependencies>
 
 	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
