add <build> tag

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <artifactId>restaurant-challenge</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <plugins>
+  <build>
+    <plugins>
   	<plugin>
         	<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
@@ -14,8 +15,8 @@
            		  <target>1.8</target>
         	</configuration>
   	</plugin>	
-  </plugins>
-	
+    </plugins>
+  </build>
   <dependencies>
 
 	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
