--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,17 @@
   <build>
     <plugins>
   	<plugin>
-        	<groupId>com.heroku.sdk</groupId>
-       		<artifactId>heroku-maven-plugin</artifactId>
-       		<version>1.1.1</version>
+        	<groupId>org.apache.maven.plugins</groupId>
+       		<artifactId>maven-compiler-plugin</artifactId>
+       		<version>3.0</version>
+        	<configuration>
+             		<source>1.8</source>
+           		  <target>1.8</target>
+        	</configuration>
   	</plugin>
 	    
 	    
-	<plugin>
+        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>2.3</version>
@@ -33,19 +37,11 @@
                     </configuration>
                 </execution>
             </executions>
-        </plugin>    
+        </plugin>
 	    
     </plugins>
   </build>
   <dependencies>
-
-
-	<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
-	<dependency>
-    		<groupId>commons-logging</groupId>
-    		<artifactId>commons-logging</artifactId>
-    		<version>1.1.1</version>
-	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 	<dependency>
