--- a/src/app.properties
+++ b/src/app.properties
@@ -1,4 +1,4 @@
-jdbc.class=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/challenge
-jdbc.username=admin
-jdbc.password=admin
+jdbc.class=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://ec2-54-163-248-14.compute-1.amazonaws.com:5432/d9pmv54ntn0r8k?sslmode=require
+jdbc.username=nqbgbvfroraocf
+jdbc.password=IJSoEHlAVVZuWl12Xs-_dI5C3j
